# generic-microservice-tester

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: audit.md  auto.md  benchmark.md  challenge-perf.md  ci-check.md  cleanup-branches.md  cleanup-plans.md  cross-review.md  detect-bs.md  gen-plan.md  implement.md  lqn-expert.md  orchestrate.md  plan.md  prepare.md  refine-full.md  refine-model.md  refine.md  review.md  sync-docs.md  test.md  verify-plan.md
docker/: Dockerfile  entrypoint.sh
examples/: 2tier.lqn
kubernetes/base/: deployment.yaml
kubernetes/examples/: 2-tier-app.yaml  2-tier-hpa.yaml
plan/: audit-fixes.md  cleanup-otel-envvars.md  e2e-closed-loop-50pct.md  e2e-lqsim-validation.md  engine-bugfix.md  fix-model6-chain-regression-tests.md  fix-model6-missing-calls.md  fix-otel-span-naming.md  locustfile-gen-and-deploy.md  lqn-interpreter.md  trace-bisimulation.md
src/: app.py  busy_wait.c  lqn_parser.py  requirements.txt
test/lqn-groundtruth/: template_annotated.lqn  validation-model.lqn
tests/: conftest.py
tests/e2e/: test_closed_loop_utilization.py  test_lqsim_predictions.py  test_template_topology.py  test_utilization_law.py
tests/helpers/: trace_validator.py
tests/unit/: test_activity_engine.py  test_busy_wait.py  test_deploy_gen.py  test_locustfile_gen.py  test_lqn_compiler.py  test_lqn_parser.py  test_trace.py  test_trace_matching_e2e.py  (+1 more)
tool-paper-ase/: paper-plan.md
tools/: deploy_gen.py  locustfile_gen.py  lqn_compiler.py  lqn_model_utils.py  lqsim_runner.py
(+3 files in other folders)
